// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DXF Snapshot Tests Acrylic Export DXF Snapshots should generate consistent DXF for acrylic material: acrylic-laser.dxf 1`] = `
"MOCK_DXF_HEADER
setUnits(Inches)
addLayer(Sheet Outlines, 3, CONTINUOUS)
addLayer(Cuts, 1, CONTINUOUS)
addLayer(Etch Lines, 5, CONTINUOUS)
setActiveLayer(Sheet Outlines)
drawRect(0, 28, 30, 0)
setActiveLayer(Cuts)
drawRect(0.5, 27.5, 5.62, 24.5)
drawRect(6.125, 27.5, 11.245, 24.5)
drawRect(11.75, 27.5, 14.87, 24.5)
drawRect(15.375, 27.5, 18.495, 24.5)
drawRect(19, 27.5, 22.12, 24.5)
drawRect(22.625, 27.5, 25.745, 24.5)
drawRect(26.25, 27.5, 29.37, 24.5)
drawRect(0.5, 24, 3.62, 21)
setActiveLayer(Etch Lines)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(6.125, 27.6, 0.1, 0, 2)
drawText(6.125, 27.6, 0.1, 0, 2)
drawText(11.75, 27.6, 0.1, 0, 3)
drawText(11.75, 27.6, 0.1, 0, 3)
drawText(15.375, 27.6, 0.1, 0, 4)
drawText(15.375, 27.6, 0.1, 0, 4)
drawText(19, 27.6, 0.1, 0, 5)
drawText(19, 27.6, 0.1, 0, 5)
drawText(22.625, 27.6, 0.1, 0, 6)
drawText(22.625, 27.6, 0.1, 0, 6)
drawText(26.25, 27.6, 0.1, 0, 7)
drawText(26.25, 27.6, 0.1, 0, 7)
drawText(0.5, 24.1, 0.1, 0, 8)
drawText(0.5, 24.1, 0.1, 0, 8)
MOCK_DXF_FOOTER"
`;

exports[`DXF Snapshot Tests DXF Consistency Tests should generate identical output across multiple runs: consistency-check.dxf 1`] = `
"MOCK_DXF_HEADER
setUnits(Inches)
addLayer(Sheet Outlines, 3, CONTINUOUS)
addLayer(Cuts, 1, CONTINUOUS)
addLayer(Labels, 5, CONTINUOUS)
setActiveLayer(Sheet Outlines)
drawRect(0, 28, 30, 0)
setActiveLayer(Cuts)
drawRect(0.5, 27.5, 5.720000000000001, 24.5)
drawRect(0.5, 27.5, 0.72, 26.9)
drawRect(0.5, 26.3, 0.72, 25.7)
drawRect(0.5, 25.1, 0.72, 24.5)
drawRect(5.5, 27.5, 5.720000000000001, 26.9)
drawRect(5.5, 26.3, 5.720000000000001, 25.7)
drawRect(5.5, 25.1, 5.720000000000001, 24.5)
drawRect(6.23, 27.5, 11.450000000000001, 24.5)
drawRect(6.23, 27.5, 6.450000000000001, 26.9)
drawRect(6.23, 26.3, 6.450000000000001, 25.7)
drawRect(6.23, 25.1, 6.450000000000001, 24.5)
drawRect(11.23, 27.5, 11.450000000000001, 26.9)
drawRect(11.23, 26.3, 11.450000000000001, 25.7)
drawRect(11.23, 25.1, 11.450000000000001, 24.5)
drawRect(10.23, 26, 10.450000000000001, 24.5)
drawRect(7.23, 26, 7.450000000000001, 24.5)
drawRect(10.23, 26, 10.450000000000001, 24.5)
drawRect(7.23, 26, 7.450000000000001, 24.5)
drawRect(11.96, 27.5, 15.180000000000001, 24.5)
drawRect(11.96, 27.5, 12.180000000000001, 26.9)
drawRect(11.96, 26.3, 12.180000000000001, 25.7)
drawRect(11.96, 25.1, 12.180000000000001, 24.5)
drawRect(14.96, 27.5, 15.180000000000001, 26.9)
drawRect(14.96, 26.3, 15.180000000000001, 25.7)
drawRect(14.96, 25.1, 15.180000000000001, 24.5)
drawRect(15.690000000000001, 27.5, 18.91, 24.5)
drawRect(15.690000000000001, 27.5, 15.910000000000002, 26.9)
drawRect(15.690000000000001, 26.3, 15.910000000000002, 25.7)
drawRect(15.690000000000001, 25.1, 15.910000000000002, 24.5)
drawRect(18.69, 27.5, 18.91, 26.9)
drawRect(18.69, 26.3, 18.91, 25.7)
drawRect(18.69, 25.1, 18.91, 24.5)
drawRect(19.42, 27.5, 22.64, 24.5)
drawRect(19.42, 26.9, 19.64, 26.3)
drawRect(19.42, 25.7, 19.64, 25.1)
drawRect(22.42, 26.9, 22.64, 26.3)
drawRect(22.42, 25.7, 22.64, 25.1)
drawRect(23.150000000000002, 27.5, 26.37, 24.5)
drawRect(23.150000000000002, 26.9, 23.37, 26.3)
drawRect(23.150000000000002, 25.7, 23.37, 25.1)
drawRect(26.150000000000002, 26.9, 26.37, 26.3)
drawRect(26.150000000000002, 25.7, 26.37, 25.1)
drawRect(0.5, 24, 3.72, 21)
drawRect(0.5, 23.4, 0.72, 22.8)
drawRect(0.5, 22.2, 0.72, 21.6)
drawRect(3.5, 23.4, 3.72, 22.8)
drawRect(3.5, 22.2, 3.72, 21.6)
drawRect(2.5, 24, 2.72, 22.5)
drawRect(2.5, 24, 2.72, 22.5)
drawRect(4.23, 24, 7.450000000000001, 21)
drawRect(4.23, 23.4, 4.450000000000001, 22.8)
drawRect(4.23, 22.2, 4.450000000000001, 21.6)
drawRect(7.23, 23.4, 7.450000000000001, 22.8)
drawRect(7.23, 22.2, 7.450000000000001, 21.6)
drawRect(6.23, 24, 6.450000000000001, 22.5)
drawRect(6.23, 24, 6.450000000000001, 22.5)
setActiveLayer(Labels)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(0.5, 24.1, 0.1, 0, 7)
drawText(0.5, 24.1, 0.1, 0, 7)
drawText(4.23, 24.1, 0.1, 0, 8)
drawText(4.23, 24.1, 0.1, 0, 8)
MOCK_DXF_FOOTER"
`;

exports[`DXF Snapshot Tests Plywood Export DXF Snapshots should generate consistent DXF with 1 pin/slot configuration: plywood-1-pin-slot.dxf 1`] = `
"MOCK_DXF_HEADER
setUnits(Inches)
addLayer(Sheet Outlines, 3, CONTINUOUS)
addLayer(Cuts, 1, CONTINUOUS)
addLayer(Labels, 5, CONTINUOUS)
setActiveLayer(Sheet Outlines)
drawRect(0, 28, 30, 0)
setActiveLayer(Cuts)
drawRect(0.5, 27.5, 5.720000000000001, 24.5)
drawRect(0.5, 27.5, 0.72, 26.5)
drawRect(0.5, 25.5, 0.72, 24.5)
drawRect(5.5, 27.5, 5.720000000000001, 26.5)
drawRect(5.5, 25.5, 5.720000000000001, 24.5)
drawRect(6.23, 27.5, 11.450000000000001, 24.5)
drawRect(6.23, 27.5, 6.450000000000001, 26.5)
drawRect(6.23, 25.5, 6.450000000000001, 24.5)
drawRect(11.23, 27.5, 11.450000000000001, 26.5)
drawRect(11.23, 25.5, 11.450000000000001, 24.5)
drawRect(10.23, 26, 10.450000000000001, 24.5)
drawRect(7.23, 26, 7.450000000000001, 24.5)
drawRect(10.23, 26, 10.450000000000001, 24.5)
drawRect(7.23, 26, 7.450000000000001, 24.5)
drawRect(11.96, 27.5, 15.180000000000001, 24.5)
drawRect(11.96, 27.5, 12.180000000000001, 26.5)
drawRect(11.96, 25.5, 12.180000000000001, 24.5)
drawRect(14.96, 27.5, 15.180000000000001, 26.5)
drawRect(14.96, 25.5, 15.180000000000001, 24.5)
drawRect(15.690000000000001, 27.5, 18.91, 24.5)
drawRect(15.690000000000001, 27.5, 15.910000000000002, 26.5)
drawRect(15.690000000000001, 25.5, 15.910000000000002, 24.5)
drawRect(18.69, 27.5, 18.91, 26.5)
drawRect(18.69, 25.5, 18.91, 24.5)
drawRect(19.42, 27.5, 22.64, 24.5)
drawRect(19.42, 26.5, 19.64, 25.5)
drawRect(22.42, 26.5, 22.64, 25.5)
drawRect(23.150000000000002, 27.5, 26.37, 24.5)
drawRect(23.150000000000002, 26.5, 23.37, 25.5)
drawRect(26.150000000000002, 26.5, 26.37, 25.5)
drawRect(0.5, 24, 3.72, 21)
drawRect(0.5, 23, 0.72, 22)
drawRect(3.5, 23, 3.72, 22)
drawRect(2.5, 24, 2.72, 22.5)
drawRect(2.5, 24, 2.72, 22.5)
drawRect(4.23, 24, 7.450000000000001, 21)
drawRect(4.23, 23, 4.450000000000001, 22)
drawRect(7.23, 23, 7.450000000000001, 22)
drawRect(6.23, 24, 6.450000000000001, 22.5)
drawRect(6.23, 24, 6.450000000000001, 22.5)
setActiveLayer(Labels)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(0.5, 24.1, 0.1, 0, 7)
drawText(0.5, 24.1, 0.1, 0, 7)
drawText(4.23, 24.1, 0.1, 0, 8)
drawText(4.23, 24.1, 0.1, 0, 8)
MOCK_DXF_FOOTER"
`;

exports[`DXF Snapshot Tests Plywood Export DXF Snapshots should generate consistent DXF with 2 pin/slot configuration: plywood-2-pin-slots.dxf 1`] = `
"MOCK_DXF_HEADER
setUnits(Inches)
addLayer(Sheet Outlines, 3, CONTINUOUS)
addLayer(Cuts, 1, CONTINUOUS)
addLayer(Labels, 5, CONTINUOUS)
setActiveLayer(Sheet Outlines)
drawRect(0, 28, 30, 0)
setActiveLayer(Cuts)
drawRect(0.5, 27.5, 5.720000000000001, 24.5)
drawRect(0.5, 27.5, 0.72, 26.9)
drawRect(0.5, 26.3, 0.72, 25.7)
drawRect(0.5, 25.1, 0.72, 24.5)
drawRect(5.5, 27.5, 5.720000000000001, 26.9)
drawRect(5.5, 26.3, 5.720000000000001, 25.7)
drawRect(5.5, 25.1, 5.720000000000001, 24.5)
drawRect(6.23, 27.5, 11.450000000000001, 24.5)
drawRect(6.23, 27.5, 6.450000000000001, 26.9)
drawRect(6.23, 26.3, 6.450000000000001, 25.7)
drawRect(6.23, 25.1, 6.450000000000001, 24.5)
drawRect(11.23, 27.5, 11.450000000000001, 26.9)
drawRect(11.23, 26.3, 11.450000000000001, 25.7)
drawRect(11.23, 25.1, 11.450000000000001, 24.5)
drawRect(10.23, 26, 10.450000000000001, 24.5)
drawRect(7.23, 26, 7.450000000000001, 24.5)
drawRect(10.23, 26, 10.450000000000001, 24.5)
drawRect(7.23, 26, 7.450000000000001, 24.5)
drawRect(11.96, 27.5, 15.180000000000001, 24.5)
drawRect(11.96, 27.5, 12.180000000000001, 26.9)
drawRect(11.96, 26.3, 12.180000000000001, 25.7)
drawRect(11.96, 25.1, 12.180000000000001, 24.5)
drawRect(14.96, 27.5, 15.180000000000001, 26.9)
drawRect(14.96, 26.3, 15.180000000000001, 25.7)
drawRect(14.96, 25.1, 15.180000000000001, 24.5)
drawRect(15.690000000000001, 27.5, 18.91, 24.5)
drawRect(15.690000000000001, 27.5, 15.910000000000002, 26.9)
drawRect(15.690000000000001, 26.3, 15.910000000000002, 25.7)
drawRect(15.690000000000001, 25.1, 15.910000000000002, 24.5)
drawRect(18.69, 27.5, 18.91, 26.9)
drawRect(18.69, 26.3, 18.91, 25.7)
drawRect(18.69, 25.1, 18.91, 24.5)
drawRect(19.42, 27.5, 22.64, 24.5)
drawRect(19.42, 26.9, 19.64, 26.3)
drawRect(19.42, 25.7, 19.64, 25.1)
drawRect(22.42, 26.9, 22.64, 26.3)
drawRect(22.42, 25.7, 22.64, 25.1)
drawRect(23.150000000000002, 27.5, 26.37, 24.5)
drawRect(23.150000000000002, 26.9, 23.37, 26.3)
drawRect(23.150000000000002, 25.7, 23.37, 25.1)
drawRect(26.150000000000002, 26.9, 26.37, 26.3)
drawRect(26.150000000000002, 25.7, 26.37, 25.1)
drawRect(0.5, 24, 3.72, 21)
drawRect(0.5, 23.4, 0.72, 22.8)
drawRect(0.5, 22.2, 0.72, 21.6)
drawRect(3.5, 23.4, 3.72, 22.8)
drawRect(3.5, 22.2, 3.72, 21.6)
drawRect(2.5, 24, 2.72, 22.5)
drawRect(2.5, 24, 2.72, 22.5)
drawRect(4.23, 24, 7.450000000000001, 21)
drawRect(4.23, 23.4, 4.450000000000001, 22.8)
drawRect(4.23, 22.2, 4.450000000000001, 21.6)
drawRect(7.23, 23.4, 7.450000000000001, 22.8)
drawRect(7.23, 22.2, 7.450000000000001, 21.6)
drawRect(6.23, 24, 6.450000000000001, 22.5)
drawRect(6.23, 24, 6.450000000000001, 22.5)
setActiveLayer(Labels)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(0.5, 24.1, 0.1, 0, 7)
drawText(0.5, 24.1, 0.1, 0, 7)
drawText(4.23, 24.1, 0.1, 0, 8)
drawText(4.23, 24.1, 0.1, 0, 8)
MOCK_DXF_FOOTER"
`;

exports[`DXF Snapshot Tests Plywood Export DXF Snapshots should generate consistent DXF with different case depth: plywood-case-depth-4.dxf 1`] = `
"MOCK_DXF_HEADER
setUnits(Inches)
addLayer(Sheet Outlines, 3, CONTINUOUS)
addLayer(Cuts, 1, CONTINUOUS)
addLayer(Labels, 5, CONTINUOUS)
setActiveLayer(Sheet Outlines)
drawRect(0, 28, 30, 0)
setActiveLayer(Cuts)
drawRect(0.5, 27.5, 5.720000000000001, 23.5)
drawRect(0.5, 27.5, 0.72, 26.7)
drawRect(0.5, 25.9, 0.72, 25.1)
drawRect(0.5, 24.3, 0.72, 23.5)
drawRect(5.5, 27.5, 5.720000000000001, 26.7)
drawRect(5.5, 25.9, 5.720000000000001, 25.1)
drawRect(5.5, 24.3, 5.720000000000001, 23.5)
drawRect(6.23, 27.5, 11.450000000000001, 23.5)
drawRect(6.23, 27.5, 6.450000000000001, 26.7)
drawRect(6.23, 25.9, 6.450000000000001, 25.1)
drawRect(6.23, 24.3, 6.450000000000001, 23.5)
drawRect(11.23, 27.5, 11.450000000000001, 26.7)
drawRect(11.23, 25.9, 11.450000000000001, 25.1)
drawRect(11.23, 24.3, 11.450000000000001, 23.5)
drawRect(10.23, 25.5, 10.450000000000001, 23.5)
drawRect(7.23, 25.5, 7.450000000000001, 23.5)
drawRect(10.23, 25.5, 10.450000000000001, 23.5)
drawRect(7.23, 25.5, 7.450000000000001, 23.5)
drawRect(11.96, 27.5, 15.180000000000001, 23.5)
drawRect(11.96, 27.5, 12.180000000000001, 26.7)
drawRect(11.96, 25.9, 12.180000000000001, 25.1)
drawRect(11.96, 24.3, 12.180000000000001, 23.5)
drawRect(14.96, 27.5, 15.180000000000001, 26.7)
drawRect(14.96, 25.9, 15.180000000000001, 25.1)
drawRect(14.96, 24.3, 15.180000000000001, 23.5)
drawRect(15.690000000000001, 27.5, 18.91, 23.5)
drawRect(15.690000000000001, 27.5, 15.910000000000002, 26.7)
drawRect(15.690000000000001, 25.9, 15.910000000000002, 25.1)
drawRect(15.690000000000001, 24.3, 15.910000000000002, 23.5)
drawRect(18.69, 27.5, 18.91, 26.7)
drawRect(18.69, 25.9, 18.91, 25.1)
drawRect(18.69, 24.3, 18.91, 23.5)
drawRect(19.42, 27.5, 22.64, 23.5)
drawRect(19.42, 26.7, 19.64, 25.9)
drawRect(19.42, 25.1, 19.64, 24.3)
drawRect(22.42, 26.7, 22.64, 25.9)
drawRect(22.42, 25.1, 22.64, 24.3)
drawRect(23.150000000000002, 27.5, 26.37, 23.5)
drawRect(23.150000000000002, 26.7, 23.37, 25.9)
drawRect(23.150000000000002, 25.1, 23.37, 24.3)
drawRect(26.150000000000002, 26.7, 26.37, 25.9)
drawRect(26.150000000000002, 25.1, 26.37, 24.3)
drawRect(0.5, 23, 3.72, 19)
drawRect(0.5, 22.2, 0.72, 21.4)
drawRect(0.5, 20.6, 0.72, 19.799999999999997)
drawRect(3.5, 22.2, 3.72, 21.4)
drawRect(3.5, 20.6, 3.72, 19.799999999999997)
drawRect(2.5, 23, 2.72, 21)
drawRect(2.5, 23, 2.72, 21)
drawRect(4.23, 23, 7.450000000000001, 19)
drawRect(4.23, 22.2, 4.450000000000001, 21.4)
drawRect(4.23, 20.6, 4.450000000000001, 19.799999999999997)
drawRect(7.23, 22.2, 7.450000000000001, 21.4)
drawRect(7.23, 20.6, 7.450000000000001, 19.799999999999997)
drawRect(6.23, 23, 6.450000000000001, 21)
drawRect(6.23, 23, 6.450000000000001, 21)
setActiveLayer(Labels)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(0.5, 27.6, 0.1, 0, 1)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(6.23, 27.6, 0.1, 0, 2)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(11.96, 27.6, 0.1, 0, 3)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(15.690000000000001, 27.6, 0.1, 0, 4)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(19.42, 27.6, 0.1, 0, 5)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(23.150000000000002, 27.6, 0.1, 0, 6)
drawText(0.5, 23.1, 0.1, 0, 7)
drawText(0.5, 23.1, 0.1, 0, 7)
drawText(4.23, 23.1, 0.1, 0, 8)
drawText(4.23, 23.1, 0.1, 0, 8)
MOCK_DXF_FOOTER"
`;
